src/test/deca/context/valid/programme_vide.deca
// Description:
//    programme vide
//
// Resultats:
//    ok
//
// Historique:
//    cree le 11/01/2023

